# VelocityX

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  newver.md
.github/: FUNDING.yml
.github/workflows/: ci.yml
benches/: mpmc_queue_benchmarks.rs  performance.rs
examples/: advanced_performance.rs  basic_usage.rs  cache_server.rs  message_passing.rs  performance_benchmark.rs  task_scheduler.rs  web_server_queue.rs
src/: lib.rs
src/deque/: mod.rs  tests.rs  work_stealing.rs
src/map/: concurrent.rs  mod.rs  tests.rs
src/metrics/: mod.rs
src/queue/: loom_tests.rs  mod.rs  mpmc.rs  mpmc_simple.rs  proptests.rs  tests.rs
src/stack/: lock_free.rs  mod.rs
tests/: integration.rs
