[package]
name = "velocityx"
version = "0.2.2"
edition = "2021"
authors = ["VelocityX Contributors"]
description = "A production-ready Rust crate for lock-free concurrent data structures"
documentation = "https://docs.rs/velocityx"
repository = "https://github.com/velocityx/velocityx"
homepage = "https://velocityx.rs"
readme = "README.md"
keywords = ["concurrent", "lock-free", "data-structures", "mpmc", "queue"]
categories = ["concurrency", "data-structures", "algorithms"]
license = "MIT OR Apache-2.0"
rust-version = "1.65"

[features]
default = ["std"]
std = []
loom = ["dep:loom"]

[dependencies]
crossbeam-utils = "0.8"
crossbeam-epoch = "0.9"
crossbeam-deque = "0.8"
parking_lot = "0.12"
loom = { version = "0.7", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.0"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.bench]
debug = true
lto = true
codegen-units = 1
