[package]
name = "velocityx"
version = "0.4.1"
edition = "2021"
authors = ["VelocityX Contributors"]
description = "A production-ready Rust crate for lock-free concurrent data structures with performance monitoring"
documentation = "https://docs.rs/velocityx"
repository = "https://github.com/M1tsumi/VelocityX"
homepage = "https://velocityx.rs"
readme = "README.md"
keywords = ["concurrent", "lock-free", "data-structures", "performance", "metrics"]
categories = ["concurrency", "data-structures", "algorithms"]
license = "MIT OR Apache-2.0"
rust-version = "1.65"

[features]
default = ["std"]
std = [
    "dep:crossbeam-utils",
    "dep:crossbeam-epoch",
    "dep:crossbeam-deque",
    "dep:parking_lot",
]
serde = ["dep:serde"]
unstable = []
loom = ["dep:loom"]
lockfree = ["std"]

[dependencies]
crossbeam-utils = { version = "0.8", optional = true }
crossbeam-epoch = { version = "0.9", optional = true }
crossbeam-deque = { version = "0.8", optional = true }
parking_lot = { version = "0.12", optional = true }
loom = { version = "0.7", optional = true }
serde = { version = "1.0", optional = true, features = ["derive"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.0"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.bench]
debug = true
lto = true
codegen-units = 1
